--- a/dotfiles/config/picom/picom.conf
+++ b/dotfiles/config/picom/picom.conf
@@ -33,6 +33,7 @@ fade-exclude = [
 # Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
 # no-fading-destroyed-argb = false
 
+# Deactivate in VM!!!!!
 # backend = "glx";
 
 #################################
