--- a/dotfiles/config/i3/config
+++ b/dotfiles/config/i3/config
@@ -16,8 +16,11 @@ title_align center
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font CaskaydiaCove Nerd Font Mono 10
-font pango: CaskaydiaCove Nerd Font Mono 10
+
+font NotoSansM NFM 10
+font pango: NotoSansM NFM10
+# font CaskaydiaCove NFM 10
+# font pango: CaskaydiaCove NFM 10
 
 # Set inner/outer gaps
 gaps inner 15
@@ -245,4 +248,4 @@ exec --no-startup-id setxkbmap de
 exec --no-startup-id numlockx on
 exec_always killall picom ; picom -b
 exec_always --no-startup-id sh ~/archinstall/vbres.sh
-exec_always pkill -9 polybar ; polybar
+exec_always pkill -9 polybar ; polybar main
