--- a/dotfiles/config/kitty/kitty.conf
+++ b/dotfiles/config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      CaskaydiaCove Nerd Font Mono
+font_family      CaskaydiaCove NFM
 font_size 12.0
 bold_font        auto
 italic_font      auto
