--- a/dotfiles/config/kitty/kitty.conf
+++ b/dotfiles/config/kitty/kitty.conf
@@ -6,7 +6,8 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      CaskaydiaCove NFM
+# font_family      CaskaydiaCove NFM
+font_family      NotoSansM NFM
 font_size 12.0
 bold_font        auto
 italic_font      auto
