--- a/dotfiles/config/starship.toml
+++ b/dotfiles/config/starship.toml
@@ -7,29 +7,29 @@ success_symbol = "[❯](bold green)"
 error_symbol = "[❯](bold red)"
 vimcmd_symbol = "[❮](green)"
 
-[directory]
-truncation_length = 4
-# Catppuccin 'lavender'
-style = "bold lavender"
-
 # First param ─┌
 [username]
 format = " [╭─$user]($style)@"
 show_always = true
-style_root = "bold maroon"
-style_user = "bold maroon"
+style_root = "bold blue"
+style_user = "bold blue"
 
 # Second param
 [hostname]
 disabled = false
 format = "[$hostname]($style) in "
 ssh_only = false
-style = "bold dimmed maroon"
+style = "bold dimmed blue"
 trim_at = "-"
+
+# Third param
+[directory]
+truncation_length = 4
+style = "bold lavender"
 
 # Fourth param
 [sudo]
-disabled = false
+disabled = true
 
 [palettes.catppuccin_mocha]
 rosewater = "#f5e0dc"
