--- a/dotfiles/config/polybar/config
+++ b/dotfiles/config/polybar/config
@@ -68,11 +68,11 @@ module-margin-right = 1
 # font-1 = "CaskaydiaCove NFM:pixelsize=13:style=Regular;2"
 font-0 = "NotoSansM NFM:pixelsize=16:style=Regular;2"
 font-1 = "NotoSansM NFM:pixelsize=13:style=Regular;2"
-
+font-2 = "NotoSansM NFM:pixelsize=18:style=Regular;2"
 
 modules-left = i3 
 modules-center = 
-modules-right = date
+modules-right = wlan eth pulseaudio date
 
 ; tray-position = right
 tray-padding = 0
@@ -236,3 +236,184 @@ format-prefix-foreground = ${colors.text}
 
 label = %date% %time%
 label-font = 2
+
+[module/pulseaudio]
+type = internal/pulseaudio
+
+; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
+; If not, uses default sink
+; sink = alsa_output.pci-0000_12_00.3.analog-stereo
+
+; Use PA_VOLUME_UI_MAX (~153%) if true, or PA_VOLUME_NORM (100%) if false
+; Default: true
+use-ui-max = true
+
+; Interval for volume increase/decrease (in percent points)
+; Default: 5
+interval = 5
+
+; Reverses the increment/decrement on scroll event. Set this to true if you are
+; using natural scrolling option on your touchpad.
+; New in version 3.7.0
+; Default: false
+reverse-scroll = false
+
+; Available tags:
+;   <label-volume> (default)
+;   <ramp-volume>
+;   <bar-volume>
+format-volume = <ramp-volume> <label-volume>
+label-volume-font = 2
+
+
+; Available tags:
+;   <label-muted> (default)
+;   <ramp-volume>
+;   <bar-volume>
+;format-muted = <label-muted>
+
+; Available tokens:
+;   %percentage% (default)
+;   %decibels%
+;label-volume = %percentage%%
+
+; Available tokens:
+;   %percentage% (default)
+;   %decibels%
+label-muted = 󰸈 muted
+label-muted-foreground = ${colors.text}
+
+; Only applies if <ramp-volume> is used
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 󰕾
+format-volume-font = 3
+
+; Right and Middle click
+click-right = pavucontrol
+; click-middle = 
+
+[module/wlan]
+type = internal/network
+; Name of the network interface to display. You can get the names of the
+; interfaces on your machine with `ip link`
+; Wireless interfaces often start with `wl` and ethernet interface with `eno` or `eth`
+interface = wlan0
+
+; If no interface is specified, polybar can detect an interface of the given type.
+; If multiple are found, it will prefer running interfaces and otherwise just
+; use the first one found.
+; Either 'wired' or 'wireless'
+; New in version 3.6.0
+interface-type = wireless
+
+; Seconds to sleep between updates
+; Default: 1
+interval = 3.0
+
+; NOTE: Experimental (might change or be removed in the future)
+; Test connectivity every Nth update by pinging 8.8.8.8
+; In case the ping fails 'format-packetloss' is used until the next ping
+; A value of 0 disables the feature
+; Default: 0
+;ping-interval = 3
+
+; @deprecated: Define min width using token specifiers (%downspeed:min% and %upspeed:min%)
+; Minimum output width of upload/download rate
+; Default: 3
+udspeed-minwidth = 5
+
+; Accumulate values from all interfaces
+; when querying for up/downspeed rate
+; Default: false
+accumulate-stats = true
+
+; Consider an `UNKNOWN` interface state as up.
+; Some devices like USB network adapters have 
+; an unknown state, even when they're running
+; Default: false
+unknown-as-up = true
+
+; The unit used for displaying network speeds
+; For example if set to the empty string, a speed of 5 KB/s is displayed as 5 K
+; Default: B/s
+; New in version 3.6.0
+speed-unit = ''
+
+; Available tags:
+;   <label-connected> (default)
+;   <ramp-signal>
+format-connected = <ramp-signal> <label-connected>
+click-right = nm-connection-editor
+
+; Available tags:
+;   <label-disconnected> (default)
+format-disconnected = <label-disconnected>
+
+; Used when connected, but ping fails (see ping-interval)
+; Available tags:
+;   <label-connected> (default)
+;   <label-packetloss>
+;   <animation-packetloss>
+format-packetloss = <animation-packetloss> <label-connected>
+
+; All labels support the following tokens:
+;   %ifname%    [wireless+wired]
+;   %local_ip%  [wireless+wired]
+;   %local_ip6% [wireless+wired]
+;   %essid%     [wireless]
+;   %signal%    [wireless]
+;   %upspeed%   [wireless+wired]
+;   %downspeed% [wireless+wired]
+;   %netspeed%  [wireless+wired] (%upspeed% + %downspeed%) (New in version 3.6.0)
+;   %linkspeed% [wired]
+;   %mac%       [wireless+wired] (New in version 3.6.0)
+
+; Default: %ifname% %local_ip%
+label-connected = %{A3:nm-connection-editor:}%essid%%{A}
+label-connected-foreground = ${colors.text}
+
+; Default: (none)
+label-disconnected = not connected
+label-disconnected-foreground = ${colors.text}
+
+; Default: (none)
+;label-packetloss = %essid%
+;label-packetloss-foreground = #eefafafa
+
+; Only applies if <ramp-signal> is used
+ramp-signal-0 = 󰞃
+ramp-signal-1 = 󰢿
+ramp-signal-2 = 󰢽
+ramp-signal-3 = 󰢾
+ramp-signal-4 = 󰒢
+ramp-signal-5 = 
+
+; Only applies if <animation-packetloss> is used
+animation-packetloss-0 = ⚠
+animation-packetloss-0-foreground = ${colors.red}
+animation-packetloss-1 = 󱧙
+animation-packetloss-1-foreground = ${colors.yellow}
+; Framerate in milliseconds
+animation-packetloss-framerate = 500
+
+[module/eth]
+type = internal/network
+; interface = ${env:DEFAULT_NETWORK_INTERFACE:enp3s0}
+; interface = enp3s0
+interface = enp0s3
+interval = 5
+
+format-connected = <label-connected>
+format-connected-prefix = ""
+format-connected-prefix-foreground = ${colors.text}
+; label-connected = %local_ip%
+label-connected = ""
+format-connected-foreground = ${colors.text}
+
+format-disconnected =
+;format-disconnected = <label-disconnected>
+;format-disconnected-underline = ${self.format-connected-underline}
+;label-disconnected = %ifname% disconnected
+;label-disconnected-foreground = ${colors.foreground-alt}
+
