--- a/dotfiles/home/.ICAClient/wfclient.ini
+++ b/dotfiles/home/.ICAClient/wfclient.ini
@@ -7,15 +7,14 @@
 ;    Copyright 1994-2023 Citrix Systems, Inc. All rights reserved.
 ;
 ;********************************************************************
-
 [WFClient]
-Version = 2
-KeyboardLayout = (User Profile)
+Version=2
+KeyboardLayout=(User Profile)
 KeyboardType=(Default)
-KeyboardMappingFile = automatic.kbd
-KeyboardDescription = Automatic (User Profile)
-KeyboardEventMode = Unicode
-KeyboardSyncMode = Once
+KeyboardMappingFile=automatic.kbd
+KeyboardDescription=Automatic (User Profile)
+KeyboardEventMode=Unicode
+KeyboardSyncMode=Once
 CREnabled=True
 AllowBidirectionalContentRedirection=False
 BrowserProtocol=HTTPonTCP
@@ -44,11 +43,12 @@ IgnoreErrors=9,15,32
 AllowAudioInput=True
 HDXH264InputEnabled=True
 [Thinwire3.0]
-DesiredHRES = 640
-DesiredVRES = 480
-DesiredColor = 15 
-PersistentCachePath = $HOME/.ICAClient/cache
-PersistentCacheMinBitmap = 2048
-PersistentCacheEnabled = Off
+DesiredHRES=640
+DesiredVRES=480
+DesiredColor=15 
+PersistentCachePath=$HOME/.ICAClient/cache
+PersistentCacheMinBitmap=2048
+PersistentCacheEnabled=Off
 ApproximateColors=No
-UseFullScreen=True
+UseFullScreen=False
+
