--- a/dotfiles/config/i3/config
+++ b/dotfiles/config/i3/config
@@ -249,6 +249,7 @@ focus_follows_mouse no
 
 # Programs
 exec --no-startup-id setxkbmap de
+exec --no-startup-id setxkbmap -option caps:escape
 exec --no-startup-id numlockx on
 exec_always killall picom ; picom -b
 exec_always --no-startup-id sh ~/archinstall/vbres.sh
