--- a/dotfiles/usr/share/sddm/themes/catppuccin-mocha/theme.conf
+++ b/dotfiles/usr/share/sddm/themes/catppuccin-mocha/theme.conf
@@ -2,9 +2,10 @@
 Font="Noto Sans"
 FontSize=9
 ClockEnabled="true"
-CustomBackground="false"
+CustomBackground="true"
 LoginBackground="false"
-Background="backgrounds/wall.jpg"
+Background="backgrounds/catpuccin-minimal.png"
+type=image
 
 # DON'T CHANGE THESE
 rosewater = "#f5e0dc"
